# wheezy.http

./: Makefile  README  README.md  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  release.yml  tests.yml
demos/ajax/: app.py  test_app.py
demos/guestbook/: guestbook.py  test_guestbook.py
demos/hello/: benchmark_helloworld.py  helloworld.py  test_helloworld.py
demos/oauth2/: app.py
demos/streaming/: config.ini  streaming.py
demos/upload/: app.py
demos/wsgi_adapter/: wsgi_adapter.py
doc/: conf.py  examples.rst  gettingstarted.rst  index.rst  modules.rst  testing.rst  userguide.rst
requirements/: dev-py2.txt  dev-py3.txt  dev.in  dev.txt  docs.in  docs.txt
src/wheezy/http/: __init__.py  application.py  authorization.py  cache.py  cachepolicy.py  cacheprofile.py  comp.py  config.py  cookie.py  date.py  functional.py  headers.py  method.py  middleware.py  p2to3.py  parse.py  parser.py  request.py  response.py  sample.py  transforms.py  utils.py
src/wheezy/http/crypto/: padding.py  ticket.py
src/wheezy/http/decorators/: __init__.py  method.py
src/wheezy/http/tests/: sample.py  test_application.py  test_authorization.py  test_cache.py  test_cachepolicy.py  test_cacheprofile.py  test_config.py  test_cookie.py  test_functional.py  test_method.py  test_middleware.py  test_parse.py  test_request.py  test_response.py  test_transforms.py
