[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wheezy.http"
dynamic = ["version"]
description = "A lightweight http request-response library"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Andriy Kornatskyy", email = "andriy.kornatskyy@live.com" }]
keywords = [
  "wsgi",
  "http",
  "request",
  "response",
  "cache",
  "cachepolicy",
  "cookie",
  "functional",
  "middleware",
  "transforms",
]
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Internet :: WWW/HTTP :: WSGI",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
dependencies = ["wheezy.core>=3.2.3"]

[project.optional-dependencies]
cython = ["Cython>=3.0", "setuptools>=61.0"]

[project.urls]
Homepage = "https://github.com/akornatskyy/wheezy.http"
Source = "https://github.com/akornatskyy/wheezy.http"
Issues = "https://github.com/akornatskyy/wheezy.http/issues"

[tool.setuptools]
packages = ["wheezy.http"]
package-dir = { "" = "src" }
zip-safe = false
include-package-data = true

# [tool.setuptools.package-data]
# "wheezy.core" = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "wheezy.http.__version__" }

[tool.pytest.ini_options]
pythonpath = ["src"]
consider_namespace_packages = true

[tool.coverage.run]
source = ["src/wheezy/http"]
omit = ["*/test_*.py", "*/tests/*", "src/wheezy/http/_cgi.py"]
